# SmartXm

./: README.md
Requirements/: .$Use Case Diagram.drawio.bkp  .$UseCaseDiagram.drawio.bkp
Tools/: helper.cpp
Tools/ClipMon/: clipmon.cpp  clipmon.h
Tools/Keylogger/: 230201.key  helper.cpp  keylogger.cpp  keylogger.h
Tools/Logs/: 01-09-2025_15-18-00.clip  01-09-2025_15-18-00.key  230201.clip  230201.key  250829.clip  250829.key  30-08-2025_00-03-21.clip  30-08-2025_00-03-21.key  30-08-2025_00-06-14.clip  30-08-2025_00-06-14.key
UI-prototyping/Notepad/: CMakeLists.txt  CMakeLists.txt.user.8655bae  CMakeLists.txt.user.c41929a  notepad.cpp  notepad.h  notepad.ui  toast.cpp  toast.h
UI-prototyping/TeacherUI/: CMakeLists.txt  main.cpp  teachermanagementwindow.cpp  teachermanagementwindow.h  teachermanagementwindow.ui  teachermanagementwindow.ui.autosave
UI-prototyping/login/: CMakeLists.txt  CMakeLists.txt.user.c7782b4  login_window.cpp  login_window.h  login_window.ui  main.cpp
